# gpt-run

./: .env.sample  .gitignore  CLAUDE.md  deploy.sh  docker-compose.yml  nginx.conf
.claude/agents/: common-test-agent.md  python-impl-agent.md  typescript-react-impl-agent.md
.claude/skills/common-coding-guide/: SKILL.md
.cursor/agents/: fastapi-impl-agent.md
.cursor/rules/: common-security-rule.md  fastapi-coding-style.md  python-coding-style.md  typescript-react-coding_style.md
.my-docs/planning/: 00-overview.md  01-auth.md  02-dashboard.md  03-activities.md  04-activity-detail.md  07-profile.md  08-llm-coaching.md
.my-docs/requirement/: requirement.md
.my-docs/sessions/: 2026-02-20-1500-poetry-to-uv-vscode.md  2026-02-20-1600-chrome-debugger.md  2026-02-20-cursor2claude.md  2026-03-01-1000-cloud-deploy-survey.md  2026-03-02-1300-terraform-oci.md  2026-03-02-stop-hook-notify.md  2026-03-03-apple-fitness.md  2026-03-08-hook-notify.md
backend/: database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  tcx_parser.py
backend/backend/: requirements.txt
backend/prompts/: evaluation.txt  plan.txt
backend/routers/: activities.py  plans.py  races.py  users.py
backend/services/llm/: graph.py  models.py  plan_graph.py  prompts.py
frontend-ts/: Dockerfile  package-lock.json
frontend-ts/lib/: types.ts  validation.ts
terraform/: .terraform.lock.hcl  cloud-init.yaml  compute.tf  network.tf  outputs.tf  providers.tf  retry-apply.sh  terraform.tfvars.sample  variables.tf
test-data/: Wednesday Afternoon Indoor Run.tcx
(+35 files in other folders)
